Actualizacion views.py

--- a/serviciosBancarios/templates/interbancaria.html
+++ b/serviciosBancarios/templates/interbancaria.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <li><a href="/sesion/">Interbancaria</a></li>
+    <li><a href="#">Bancaria</a></li>
+    <li><a href="/login_page/">Salir</a></li>
     <h1>Datos Cliente:</h1>
         <p>Nombre: {{cliente.nombres}}</p>
         <p>Cedula: {{cliente.cedula}}</p>
