--- a/serviciosBancarios/templates/index_cliente.html
+++ b/serviciosBancarios/templates/index_cliente.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <li><a href="/sesion/">Interbancaria</a></li>
+    <li><a href="#">Bancaria</a></li>
     <li><a href="/login_page/">Salir</a></li>
     <h1>Datos Cliente:</h1>
         <p>Nombre: {{cliente.nombres}}</p>
