Actualizacion Servicios Views

--- a/serviciosBancarios/templates/bancaria.html
+++ b/serviciosBancarios/templates/bancaria.html
@@ -9,6 +9,7 @@
 <body>
     <li><a href="/sesion/">Interbancaria</a></li>
     <li><a href="/sesion_b/">Bancaria</a></li>
+    <li><a href="/sesion_d_r/">Deposito/Retiro</a></li>
     <li><a href="/login_page/">Salir</a></li>
     <h1>Datos Cliente:</h1>
         <p>Nombre: {{cliente.nombres}}</p>
